<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_conner_16"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_conner_top"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:padding="12dp"
        android:text="Search Location"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/find_location"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16sp"
            android:background="@drawable/bg_conner_10_border"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_location"
            android:padding="12dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16sp">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:alpha="0.5"
                android:background="@drawable/bg_conner_cancel"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/cancel"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonFind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_conner_find"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/find"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>