<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:ignore="SpeakableTextPresentCheck">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <View
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="55dp"/>

            <TextView
                android:layout_weight="1"
                android:id="@+id/textLocation"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/location"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="26dp" />

            <ImageButton
                android:layout_weight="3"
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@null"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorWhite" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="20dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"

            android:background="@drawable/conner_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/textToday"
                    android:textSize="30dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:layout_marginStart="30dp"/>
                <TextView
                    android:id="@+id/textDate"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Sad,3 Aug"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center_horizontal|right"
                    android:layout_marginEnd="30dp"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/textTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="25"
                    android:textColor="@color/colorWhite"
                    android:textSize="70sp" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:paddingTop="15dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="°c"
                    android:textColor="@color/colorYellow"
                    android:textSize="36sp" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/sun"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Clounds"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/colorStroke"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/textToday"
                android:textSize="20sp"
                android:textColor="@color/colorYellow"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/buttonChart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/poppins_regular"
                android:onClick="buttonChartOnClick"
                android:text="@string/textChart"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/buttonSetting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_regular"
                android:gravity="right|center"
                android:onClick="buttonForecastOnClick"
                android:text="@string/text7day"
                android:textColor="#3388b4"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/textsunrise"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textSunrise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingBottom="10dp"
                        android:text="@null"
                        android:textColor="@color/colorWhite"
                        android:textSize="26dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/textwind"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textWind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingBottom="10dp"
                        android:text="@null"
                        android:textColor="@color/colorWhite"
                        android:textSize="26dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/sea_level"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textMax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingBottom="10dp"
                        android:text="@null"
                        android:textColor="@color/colorWhite"
                        android:textSize="26dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/clouds"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textCloud"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingBottom="10dp"
                        android:text="@null"
                        android:textColor="@color/colorWhite"
                        android:textSize="26dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/pressure"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textPressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingBottom="10dp"
                        android:text="@null"
                        android:textColor="@color/colorWhite"
                        android:textSize="26dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/textsunset"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textSunset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingBottom="10dp"
                        android:text="@null"
                        android:textColor="@color/colorWhite"
                        android:textSize="26dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/texthumidity"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textHumidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingBottom="10dp"
                        android:text="@null"
                        android:textColor="@color/colorWhite"
                        android:textSize="26dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/temp_min"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textMin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingBottom="10dp"
                        android:text="@null"
                        android:textColor="@color/colorWhite"
                        android:textSize="26dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/feels_like"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textFeekslike"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingBottom="10dp"
                        android:text="@null"
                        android:textColor="@color/colorWhite"
                        android:textSize="26dp" />


                </LinearLayout>

            </LinearLayout>





        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="10.0sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:gravity="center|right|center_horizontal">

            <TextView
                android:id="@+id/textUpdateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/update"
                android:textColor="@color/colorWhite"
                android:layout_marginEnd="5dp"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:src="@drawable/ic_refresh"
                android:rotation="90"
                android:onClick="refrestData"
                app:tint="@color/colorWhite"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>