<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_conner_16"
    android:layout_margin="16dp"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/textDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:background="@drawable/bg_conner_top"
        android:text="@string/textToday"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:padding="12dp"
            android:layout_marginTop="16sp">

            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/sun"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"
                android:alpha="0.5"/>

            <TextView
                android:id="@+id/textTemp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:padding="12dp"
                android:text="25°"
                android:textColor="@color/black"
                android:textSize="45sp" />
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTempMax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/max"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textTempMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/min"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:padding="12dp"
                android:text="overcast clouds"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textHumi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:padding="12dp"
                android:text="Humidity : 90%"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textWindspeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:padding="12dp"
                android:text="Wind : 7 m/s"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textCloud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:padding="12dp"
                android:text="Cloud : 100%"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>